--- a/public/index.html
+++ b/public/index.html
@@ -50,45 +50,47 @@
       </div>
 
       <div class="bottom-section">
-        <div class="content-grid">
-          <div class="section">
-            <h2 class="section-title">TASKS</h2>
-            <ul class="content-list">
-              <li>I want to learn what supports are available for my parent.</li>
-              <li>I want to know what advice I can give my parent.</li>
-            </ul>
-          </div>
+        <div class="content-grid-wrapper">
+          <div class="content-grid">
+            <div class="section">
+              <h2 class="section-title">TASKS</h2>
+              <ul class="content-list">
+                <li>I want to learn what supports are available for my parent.</li>
+                <li>I want to know what advice I can give my parent.</li>
+              </ul>
+            </div>
 
-          <div class="section">
-            <h2 class="section-title">FEELINGS</h2>
-            <ul class="content-list">
-              <li>Protective.</li>
-              <li>Powerless due to the "bystander effect".</li>
-            </ul>
-          </div>
+            <div class="section">
+              <h2 class="section-title">FEELINGS</h2>
+              <ul class="content-list">
+                <li>Protective.</li>
+                <li>Powerless due to the "bystander effect".</li>
+              </ul>
+            </div>
 
-          <div class="section">
-            <h2 class="section-title">INFLUENCES</h2>
-            <ul class="content-list">
-              <li>My mom who has cancer.</li>
-              <li>Stigma. I feel like my loved one is being treated as second-class.</li>
-            </ul>
-          </div>
+            <div class="section">
+              <h2 class="section-title">INFLUENCES</h2>
+              <ul class="content-list">
+                <li>My mom who has cancer.</li>
+                <li>Stigma. I feel like my loved one is being treated as second-class.</li>
+              </ul>
+            </div>
 
-          <div class="section">
-            <h2 class="section-title">PAIN POINTS</h2>
-            <ul class="content-list">
-              <li>Ambiguity around the question of how long my mom will live.</li>
-              <li>Information overload on the website.</li>
-            </ul>
-          </div>
+            <div class="section">
+              <h2 class="section-title">PAIN POINTS</h2>
+              <ul class="content-list">
+                <li>Ambiguity around the question of how long my mom will live.</li>
+                <li>Information overload on the website.</li>
+              </ul>
+            </div>
 
-          <div class="section">
-            <h2 class="section-title">GOALS</h2>
-            <ul class="content-list">
-              <li>To learn how long my mom will live.</li>
-              <li>To protect and support my mom.</li>
-            </ul>
+            <div class="section">
+              <h2 class="section-title">GOALS</h2>
+              <ul class="content-list">
+                <li>To learn how long my mom will live.</li>
+                <li>To protect and support my mom.</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
